# cherrypick

./: README.md  io.github.ellie_commons.cherrypick.flathub.yml  io.github.ellie_commons.cherrypick.yml  io.github.elly_code.cherrypick.devel.yml  io.github.elly_code.cherrypick.yml  meson.build  meson_options.txt
.github/workflows/: CI.yml
data/: Application.css  cherrypick.desktop.in  cherrypick.desktop.in.in  cherrypick.gresource.xml  cherrypick.gresource.xml.in  cherrypick.gschema.xml  cherrypick.gschema.xml.in  cherrypick.metainfo.xml.in  cherrypick.metainfo.xml.in.in  meson.build
data/icons/: meson.build
po/: LINGUAS  POTFILES  README.md  cherrypick.pot  de.po  es.po  fr.po  hr.po  io.github.ellie_commons.cherrypick.pot  io.github.elly_code.cherrypick.pot  it.po  meson.build  ru.po  sv.po
po/extra/: LINGUAS  POTFILES  de.po  es.po  extra.pot  fr.po  hr.po  it.po  ru.po
src/: Application.vala  Config.vala.in  Constants.vala  meson.build
src/Controllers/: ColorController.vala
src/Models/: Color.vala  ColorHistory.vala  Format.vala
src/Services/: ColorPicker.vala  Settings.vala
src/Views/: MainView.vala
src/Widgets/: ColorButton.vala  ColorPreview.vala  FormatArea.vala  HistoryButtons.vala  HistoryHeader.vala
src/Windows/: Window.vala
